# Nexus

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  SECURITY.md  build.bat  docker-compose.yml  publish.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/agent/: loop_.rs  mod.rs  session.rs
core/src/audit/: mod.rs
core/src/checkpoint/: mod.rs
core/src/identity/: mod.rs
core/src/memory/: fts.rs  graph.rs  mod.rs  store.rs  summarizer.rs  vector.rs
core/src/network/: mod.rs
core/src/providers/: anthropic.rs  demo.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs
core/src/sandbox/: mod.rs
core/src/skills/: engine.rs  mod.rs  parser.rs  refiner.rs
core/src/tools/: builtin.rs  mod.rs
core/src/trajectory/: extractor.rs  mod.rs  recorder.rs
core/tests/: integration.rs
docs/: CHANNELS.md  SECURITY.md  TROUBLESHOOTING.md
gateway/: gateway.example.json  gateway.json  go.mod  main.go
gateway/internal/bus/: bus.go
gateway/internal/channel/: channel.go
gateway/internal/channel/discord/: discord.go
gateway/internal/channel/googlechat/: googlechat.go
gateway/internal/channel/irc/: irc.go
gateway/internal/channel/line/: line.go
gateway/internal/channel/matrix/: matrix.go
gateway/internal/channel/messenger/: messenger.go
gateway/internal/channel/msteams/: msteams.go
gateway/internal/channel/signal/: signal.go
gateway/internal/channel/slack/: slack.go
gateway/internal/channel/telegram/: telegram.go
gateway/internal/channel/twilio/: twilio.go
gateway/internal/channel/webchat/: embed.go  index.html  webchat.go
gateway/internal/channel/webhook/: webhook.go
gateway/internal/channel/whatsapp/: whatsapp.go
gateway/internal/session/: session.go
scripts/: build-all.ps1  build-all.sh  install.ps1  install.sh  release.ps1  setup.ps1  setup.sh  start.ps1
