[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Autonomous AI agent runtime with learning loop, memory, skills, and multi-agent support"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
futures = "0.3"
shellexpand = "3"
dirs = "5"
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
